Add: checker for permissions list of role.
